tests/golden/diagnostics/001_lex_unexpected_char.txt
E-LEX tests/golden/diagnostics/001_lex_unexpected_char.suay:1:1: lex error: Unexpected character '@'
@
^
